# MobileSamONNX

./: .gitignore  README.md  onnx_export.sh  pyproject.toml
mobile_sam/utils/: onnx.py
notebooks/: onnx_inference.ipynb
scripts/: export_onnx_model.py  export_onnx_vit.py  export_onnx_vit_preprocessor.py
