[project]
name = "mobilesam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "onnx>=1.17.0",
    "onnxconverter-common>=1.14.0",
    "onnxruntime>=1.21.1",
    "onnxsim>=0.4.36",
    "opencv-python>=4.11.0.86",
    "timm>=1.0.15",
    "torch>=2.7.0",
]
